fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  labels:
    app: fast-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
      - name: fast-api
        image: rohangowthami/k8spractice:0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            cpu: 400m
            memory: 400Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fast-api
spec:
  selector:
    app: fast-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
